# Gogo-City

./: .env.example  Gogo - nashville_template_tasks.csv  Gogo_-_chicago_template_tasks.csv  README.md  pyproject.toml  railway.toml
.github/workflows/: sync-fork.yml
alembic/versions/: 014_add_password_hash.py  016_normalize_city_state_names.py  380d440cca4a_merge_heads.py  91953ef80d80_rename_source_template_stop_id.py
app/: main.py
app/api/: __init__.py
app/api/routes/: achievements.py  auth.py  checkins.py  cities.py  generate.py  instances.py  sharing.py  templates.py
app/core/: auth.py  config.py
app/models/: user.py
app/schemas/: auth.py  checkins.py  instances.py
app/services/: ai_service.py  instance_service.py  route_service.py  verification_service.py
docs/: api_reference.md
docs/sprint/: csv.md  lucas.md  trey.md
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/api/: achievements.ts  auth.ts  checkins.ts  cities.ts  client.ts  instances.ts  routes.ts
frontend/src/components/: CheckInModal.tsx  NavBar.tsx  RouteMap.tsx  XPBar.tsx
frontend/src/context/: AuthContext.tsx  jwt.ts
frontend/src/pages/: GeneratePage.tsx  HomePage.tsx  LeaderboardPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  RoutePage.tsx
scripts/: import_nashville_csv.py
tests/: conftest.py  test_auth_api.py
